150104/irb.txt
CodeaCamp10s-Mac-mini:~ codea_mac_10$ irb
irb(main):001:0> 2+3
=> 5
irb(main):002:0> 3*5
=> 15
irb(main):003:0> "a mayusculas".upcase
=> "A MAYUSCULAS"
irb(main):004:0> var = "texto en minusculas"
=> "texto en minusculas"
irb(main):005:0> var.upcase
=> "TEXTO EN MINUSCULAS"
irb(main):006:0> array = [3,2,1]
=> [3, 2, 1]
irb(main):007:0> array2 = 3,2,1
=> [3, 2, 1]
irb(main):008:0> print array2.to_s
[3, 2, 1]=> nil
irb(main):009:0> puts array
3
2
1
=> nil
irb(main):010:0> print array
[3, 2, 1]=> nil
irb(main):011:0> p array
[3, 2, 1]
=> [3, 2, 1]
irb(main):012:0> inspect array
ArgumentError: wrong number of arguments (1 for 0)
  from (irb):12:in `to_s'
  from (irb):12
  from /Users/codea_mac_10/.rbenv/versions/2.2.4/bin/irb:11:in `<main>'
irb(main):013:0> array.inspect
=> "[3, 2, 1]"
irb(main):014:0> puts var
texto en minusculas
=> nil
irb(main):015:0> var.upcase!
=> "TEXTO EN MINUSCULAS"
irb(main):016:0> puts var
TEXTO EN MINUSCULAS
=> nil
irb(main):017:0> Math.root 7690939204
NoMethodError: undefined method `root' for Math:Module
  from (irb):17
  from /Users/codea_mac_10/.rbenv/versions/2.2.4/bin/irb:11:in `<main>'
irb(main):018:0> Math.square (2,3)
SyntaxError: (irb):18: syntax error, unexpected ',', expecting ')'
Math.square (2,3)
               ^
  from /Users/codea_mac_10/.rbenv/versions/2.2.4/bin/irb:11:in `<main>'
irb(main):019:0> Math.sqrt(7690939204)
=> 87698.0
irb(main):020:0> def shout(text)
irb(main):021:1> puts text.upcase!
irb(main):022:1> end
=> :shout
irb(main):023:0> shout("Hola")
HOLA
=> nil
irb(main):024:0> 